# project_skynet

./: CMakeLists.txt  README.md  build_smartHome.sh  main.cpp
boost_server/: connection.cpp  index.html  index2.html  request_handler.cpp
tools/: Utils.cpp  Utils.h
